[package]
name = "rrelayer_core"
version = "0.11.6"
resolver = "2"
edition = "2021"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "Core types and functionality for rrelayer - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer_core"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../LICENSE"
]

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.30"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "json-rpc"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
aws-sdk-secretsmanager = { version = "1.14.0", optional = true }
aws-sdk-kms = { version = "1.14.0", optional = true }
aws-sdk-sts = { version = "1.14.0", optional = true }
aws-config = { version = "1.1.4", optional = true }
base64 = "0.22.0"
chrono = { version = "0.4.19", features = ["serde"] }
bytes = "1.5.0"
regex = "1.5.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
once_cell = "1.20.2"
native-tls = "0.2.12"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
postgres-native-tls = "0.5"
hex = "0.4.3"
anyhow = "1.0.98"
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
google-secretmanager1 = { version = "6.0", optional = true }
rustls = { version = "0.23.35", features = ["ring"]}
sha2 = { version = "0.10", optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
tower = "0.5.2"
subtle = "2.6.1"
cryptoki = { version = "0.10", optional = true }
secrecy = { version = "0.8", optional = true }
jsonwebtoken = { version = "9.3", optional = true }

[features]
default = ["gcp", "aws", "privy", "turnkey", "pkcs11", "fireblocks"]
gcp = ["dep:google-secretmanager1"]
aws = ["dep:aws-sdk-kms", "dep:aws-sdk-sts", "dep:aws-sdk-secretsmanager", "dep:aws-config", "alloy/signer-aws"]
privy = []
turnkey = ["dep:p256"]
pkcs11 = ["dep:cryptoki", "dep:secrecy"]
fireblocks = ["dep:jsonwebtoken", "dep:sha2"]
